<resources>
    <string name="app_name">Дела на завтра</string>
    <string name="add_new_task">Добавить новую задачу</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="title">Название</string>
    <string name="title_hint">Введите название задачи</string>
    <string name="description">Описание</string>
    <string name="description_hint">Введите описание (необязательно)</string>
    <string name="priority">Приоритет</string>
    <string name="select_date">Выбрать дату</string>
    <string name="date_selected">Выбрано: %1$d.%2$d.%3$d</string>
    <string name="date_selected_prefix">Выбрано:</string>
    <string-array name="priority_levels">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>
    <string name="action_delete_completed">Удалить выполненные</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
</resources>